manifests/kubernetes-addons/argocd/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-dashboard
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    certmanager.k8s.io/acme-http01-edit-in-place: "false"
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  rules:
    - host: argo.kube.cloudflow.ir
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argo-argocd-server 
                port:
                  number: 443
  tls:
    - hosts:
        - argo.kube.cloudflow.ir
      secretName: argocd-dashboard-tls
